[package]
name = "passthrough-dns"
version = "0.1.0"
authors = ["Brandon Aldrich <brandon@aldr.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.5"
